--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "gh-pages": "^6.1.1"
   }
 }
